// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormSelect to match snapshot (with error massage) 1`] = `
<DocumentFragment>
  <div
    class="mb-4 form-group"
  >
    <label
      class="font-weight-bold"
      for="password"
    >
      Password
    </label>
    <div
      class="position-relative select-wrapper input-group"
    >
      <select
        class="is-invalid form-control"
        id="password"
        placeholder="Password"
      >
        <option
          value="jp"
        >
          Japanese
        </option>
        <option
          value="en"
        >
          English
        </option>
      </select>
      <i
        aria-hidden="true"
        class="position-absolute"
      >
        <svg
          class="d-block"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
          />
        </svg>
      </i>
      <div
        class="invalid-feedback"
      >
        We don’t recognize that email
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormSelect to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="mb-4 form-group"
  >
    <label
      class="font-weight-bold"
      for="password"
    >
      Password
    </label>
    <div
      class="position-relative select-wrapper input-group"
    >
      <select
        class="form-control"
        id="password"
        placeholder="Password"
      >
        <option
          value="jp"
        >
          Japanese
        </option>
        <option
          value="en"
        >
          English
        </option>
      </select>
      <i
        aria-hidden="true"
        class="position-absolute"
      >
        <svg
          class="d-block"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 320 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
          />
        </svg>
      </i>
    </div>
  </div>
</DocumentFragment>
`;
